Update draw rates

--- a/granblue/draw.html
+++ b/granblue/draw.html
@@ -30,27 +30,10 @@
 			<label>Graph the probability of drawing at least
 			<input id="minimum" type="number" value="1" min="1">
 			of:</label>
-			<textarea id="wishlist" name="wishlist" rows="5">Yyrkoon
-Heaven's Cloud
-Pilum
-Turpin Spear
-Split End
-Windflash
-Wing of the Pure
-Far Away
-Aetherial Bow
-Heroic Bow
-Cords of Heaven Lillah
-White Flag
-Tilvung
-Cloud Tomahawk
-Shadow Scepter
-Merciless Chastening
-Tiger Fang
-Sutera's Bow
-Songsmith's Harp
-Stravaria
-Zanbato</textarea>
+			<textarea id="wishlist" name="wishlist" rows="5">Ramulus
+Hauteclaire
+Caladbolg
+Ethereal Lasher</textarea>
 			<div id="group-checkboxes">
 			<input type="checkbox" id="any-ssr-w" name="any-ssr-w"><label for="any-ssr-w">Any SSR Weapon</label><br>
 			</div>
@@ -60,398 +43,407 @@ Zanbato</textarea>
 			<input id="max-draws" name="max-draws" type="number" value="100" min="1">
 			<label for="draw-data" title="Draw rate data copy and pasted from the in-game list">Draw rates from in-game</label>
 			<textarea id="draw-data" name="draw-data" rows="10">
-SS Rare Rates 3.00%
+SS Rare Rates 6.00%
 SS Rare Weapon Rates
-  Dainsleif 0.016%
-  Lohengrin 0.016%
-  Claíomh Solais 0.016%
-  Nagelring 0.017%
-  Ascalon 0.016%
-  Greatsword Andalius 0.016%
-  Yyrkoon 0.109%
-  Caladbolg 0.016%
-  Ethereal Lasher 0.017%
-  Hauteclaire 0.016%
-  Hrotti 0.016%
-  Disparia 0.017%
-  Gram 0.017%
-  Lyst Sin 0.016%
-  Mistilteinn 0.016%
-  Hoarfrost Blade Persius 0.016%
-  Phantom Thief Blade 0.017%
-  Arsene 0.017%
-  Heaven's Cloud 0.109%
-  Thunder Dirk Jove 0.016%
-  Twin Helix 0.017%
-  Azoth 0.017%
-  Bloody Scar 0.017%
-  Brionac 0.016%
-  Luin 0.017%
-  Pilum 0.109%
-  Gargantua 0.016%
-  Turpin Spear 0.109%
-  Skyrend Spear 0.017%
-  Scarlet Crest Axe 0.016%
-  Way Flyer 0.017%
-  Mettle 0.017%
-  Split End 0.109%
-  Windflash 0.109%
-  Ukonvasara 0.016%
-  Soul Eater 0.017%
-  Vassago 0.016%
-  Forbidden Inferno 0.017%
-  Illusion Scepter 0.016%
-  Starblaze Rings 0.017%
-  Ice Crystal Staff 0.016%
-  Montague's Oath 0.017%
-  Ouroboros 0.016%
-  Kerykeion 0.016%
-  Wing of the Pure 0.109%
-  Capulet's Oath 0.017%
-  Sealed Claustrum 0.016%
-  Gridarvor 0.017%
-  Kalaurops 0.016%
-  Meteora 0.017%
-  Vlisragna 0.016%
-  Stratomizer 0.017%
-  Far Away 0.109%
-  Blushing Blossom Pin 0.017%
-  Brahma Gauntlet 0.017%
-  Magma Gauntlet 0.017%
-  Scarlet Vane 0.016%
-  Ancient Bandages 0.017%
-  Coco & Mimi 0.016%
-  Roseate Aetherial Bow 0.017%
-  Aetherial Bow 0.109%
-  Heroic Bow 0.109%
-  Mobius Strip 0.016%
-  Melodic Sphere 0.017%
-  Ocean Harp 0.016%
-  Sandcastle Song-Lume 0.016%
-  Cords of Heaven Lillah  0.109%
-  Venustas 0.017%
-  Dragon Slayer 0.016%
-  Fudo-Kuniyuki 0.017%
+  Dainsleif 0.056%
+  Lohengrin 0.057%
+  Claíomh Solais 0.056%
+  Murgleis 0.057%
+  Nagelring 0.057%
+  Ascalon 0.056%
+  Greatsword Andalius 0.056%
+  Yyrkoon 0.057%
+  Caladbolg 0.056%
+  Ethereal Lasher 0.057%
+  Hauteclaire 0.057%
+  Hrotti 0.056%
+  Blutgang 0.057%
+  Disparia 0.057%
+  Gram 0.057%
+  Lyst Sin 0.056%
+  Mistilteinn 0.056%
+  Hoarfrost Blade Persius 0.056%
+  Phantom Thief Blade 0.057%
+  Arsene 0.057%
+  Heaven's Cloud 0.057%
+  Love Eternal 0.057%
+  Reunion 0.057%
+  Thunder Dirk Jove 0.056%
+  Twin Helix 0.057%
+  Azoth 0.057%
+  Bloody Scar 0.057%
+  Brionac 0.056%
+  Luin 0.057%
+  Pilum 0.056%
+  Gargantua 0.056%
+  Turpin Spear 0.056%
+  Eden 0.057%
+  Ramulus 0.056%
+  Skyrend Spear 0.057%
+  Scarlet Crest Axe 0.056%
+  Way Flyer 0.057%
+  Mettle 0.057%
+  Split End 0.057%
+  Windflash 0.056%
+  Ukonvasara 0.056%
+  Soul Eater 0.057%
+  Vassago 0.056%
+  Forbidden Inferno 0.057%
+  Illusion Scepter 0.056%
+  Starblaze Rings 0.057%
+  Ice Crystal Staff 0.056%
+  Montague's Oath 0.057%
+  Ouroboros 0.056%
+  Kerykeion 0.056%
+  Wing of the Pure 0.057%
+  Capulet's Oath 0.057%
+  Gambanteinn 0.057%
+  Sealed Claustrum 0.056%
+  Gridarvor 0.057%
+  Kalaurops 0.057%
+  Benedia 0.057%
+  Meteora 0.057%
+  Vlisragna 0.057%
+  AK-4A 0.057%
+  Stratomizer 0.057%
+  Far Away 0.056%
+  Blushing Blossom Pin 0.057%
+  Brahma Gauntlet 0.057%
+  Magma Gauntlet 0.057%
+  Scarlet Vane 0.056%
+  Ancient Bandages 0.057%
+  Coco & Mimi 0.056%
+  Roseate Aetherial Bow 0.057%
+  Aetherial Bow 0.056%
+  Heroic Bow 0.057%
+  Mobius Strip 0.057%
+  Melodic Sphere 0.057%
+  Ocean Harp 0.056%
+  Sandcastle Song-Lume 0.056%
+  Cords of Heaven Lillah  0.057%
+  Venustas 0.057%
+  Dragon Slayer 0.057%
+  Fudo-Kuniyuki 0.057%
 SS Rare Summon Rates
- Agni 0.008%
- Athena 0.016%
- Prometheus 0.016%
- Satyr 0.016%
- Sethlans 0.016%
- Shiva 0.008%
- Twin Elements 0.016%
- Bonito 0.016%
- Ca Ong 0.016%
- Grani 0.016%
- Kaguya 0.008%
- Macula Marius 0.016%
- Neptune 0.016%
- Oceanus 0.016%
- Varuna 0.008%
- Baal 0.016%
- Cybele 0.016%
- Gilgamesh 0.016%
- Medusa 0.016%
- Tezcatlipoca 0.016%
- Titan 0.008%
- Garuda 0.046%
- Morrigna 0.046%
- Nezha 0.046%
- Quetzalcoatl 0.046%
- Setekh 0.046%
- Siren 0.046%
- Zephyrus 0.023%
- Apollo 0.016%
- Grand Order 0.008%
- Hector 0.016%
- Lucifer 0.008%
- Odin 0.016%
- Vortex Dragon 0.016%
- Zeus 0.008%
- Anubis 0.016%
- Bahamut 0.008%
- Dark Angel Olivia 0.016%
- Hades 0.008%
- Lich 0.016%
- Satan 0.016%
- Typhon 0.016%
+ Agni 0.020%
+ Athena 0.041%
+ Prometheus 0.041%
+ Satyr 0.041%
+ Sethlans 0.041%
+ Shiva 0.020%
+ Twin Elements 0.041%
+ Bonito 0.041%
+ Ca Ong 0.041%
+ Grani 0.041%
+ Kaguya 0.020%
+ Macula Marius 0.041%
+ Neptune 0.041%
+ Oceanus 0.041%
+ Varuna 0.020%
+ Baal 0.041%
+ Cybele 0.041%
+ Gilgamesh 0.041%
+ Medusa 0.041%
+ Tezcatlipoca 0.041%
+ Titan 0.020%
+ Garuda 0.041%
+ Morrigna 0.041%
+ Nezha 0.041%
+ Quetzalcoatl 0.041%
+ Setekh 0.041%
+ Siren 0.041%
+ Zephyrus 0.020%
+ Apollo 0.041%
+ Grand Order 0.020%
+ Hector 0.041%
+ Lucifer 0.020%
+ Odin 0.041%
+ Vortex Dragon 0.041%
+ Zeus 0.020%
+ Anubis 0.041%
+ Bahamut 0.020%
+ Dark Angel Olivia 0.041%
+ Hades 0.020%
+ Lich 0.041%
+ Satan 0.041%
+ Typhon 0.041%
 S Rare Rates 15.00%
 S Rare Weapon Rates
-  Ember Blade 0.043%
-  Fragarach 0.166%
-  Ram-Dao 0.043%
-  Tanzanite Sword Mikoh 0.043%
-  Almace 0.166%
-  Royal Rapier 0.043%
-  Frying Pan 0.043%
-  Grand Edge 0.043%
-  Ilhoon 0.166%
-  Twisted Dagger 0.166%
-  White Flag 0.250%
-  Arondight 0.043%
-  Lyst 0.043%
-  Purity Blade 0.043%
-  Tilvung 0.250%
-  Soulbond Dirk 0.043%
-  Mirage Knife 0.166%
-  Shrike's Beak 0.043%
-  Stiletto 0.166%
-  Fusetto 0.166%
-  Sword of Lisblanc 0.043%
-  Soul Edge 0.043%
-  Puppet Knife 0.043%
-  Scalpel 0.043%
-  Sword Breaker 0.166%
-  Wyrm Claw 0.043%
-  Flare Glaive 0.043%
-  Raging Halberd 0.043%
-  Narval 0.043%
-  Titanium Harpoon 0.043%
-  Trident 0.166%
-  Dreadflayer 0.043%
-  Giant Fork 0.043%
-  Golden Mop 0.043%
-  Partisan 0.166%
-  Dragonfliar Cutter 0.166%
-  Shura Vhara 0.166%
-  Vajranda 0.166%
-  Massive Axe 0.043%
-  Bullova 0.166%
-  Fremel Hammer 0.043%
-  Great Hammer 0.043%
-  Shoka 0.166%
-  Cloud Tomahawk 0.250%
-  Golden Woofer 0.043%
-  Horseman's Hammer 0.166%
-  Voulge 0.043%
-  Arson 0.043%
-  Nature's Mystery 0.043%
-  Soothing Torch 0.043%
-  Witch's Broom 0.043%
-  Ice Bough Staff 0.043%
-  Spritewood Staff 0.043%
-  Yagrush 0.166%
-  Pastoral Staff 0.166%
-  Zhonpeli 0.043%
-  Aerial Cane 0.043%
-  Flower Crown 0.043%
-  Wind-Rhyme Staff 0.043%
-  Holy Cane 0.166%
-  Sacred Codex 0.043%
-  Cursed Cane 0.043%
-  Shadow Scepter 0.250%
-  Dolphin 0.043%
-  Dragon Tail 0.166%
-  Fire Piece 0.043%
-  Colorful Crackerjack 0.043%
-  Quarrel 0.043%
-  Handy Arquebus 0.043%
-  Wheellock Axe 0.166%
-  Crosswind 0.166%
-  Snaphance 0.166%
-  Swallowtail 0.166%
-  Chain Knuckles 0.043%
-  Crimson Talons 0.043%
-  Cup and Saucer 0.043%
-  Kaiser Knuckles 0.043%
-  Impact Knuckles 0.043%
-  Mauler 0.166%
-  Metal Glove 0.043%
-  Neko Punch 0.166%
-  Jamadhar 0.166%
-  Merciless Chastening 0.250%
-  Heavy Blast Knuckles 0.043%
-  Misanga Bracelet 0.043%
-  Tiger Fang 0.250%
-  Glass Bow 0.043%
-  Imperial Bow 0.166%
-  Sarnga 0.166%
-  Aves 0.166%
-  Ice Bow 0.043%
-  Elfin Bow 0.166%
-  Sutera's Bow 0.250%
-  Shadow Bow 0.166%
-  Aquarium Harp 0.043%
-  Athanasius 0.166%
-  Songsmith's Harp 0.250%
-  Stravaria 0.250%
-  Iron Tiger 0.166%
-  Wandering Blade 0.043%
-  Fluorithium Blade 0.166%
-  Zanbato 0.250%
-  Sauria 0.166%
+  Ember Blade 0.149%
+  Fragarach 0.055%
+  Ram-Dao 0.149%
+  Tanzanite Sword Mikoh 0.149%
+  Almace 0.055%
+  Royal Rapier 0.149%
+  Frying Pan 0.149%
+  Grand Edge 0.149%
+  Ilhoon 0.055%
+  Twisted Dagger 0.055%
+  White Flag 0.149%
+  Arondight 0.149%
+  Lyst 0.149%
+  Purity Blade 0.149%
+  Tilvung 0.149%
+  Soulbond Dirk 0.149%
+  Mirage Knife 0.055%
+  Shrike's Beak 0.149%
+  Stiletto 0.055%
+  Fusetto 0.055%
+  Sword of Lisblanc 0.149%
+  Soul Edge 0.149%
+  Puppet Knife 0.149%
+  Scalpel 0.149%
+  Sword Breaker 0.055%
+  Wyrm Claw 0.149%
+  Flare Glaive 0.149%
+  Raging Halberd 0.149%
+  Narval 0.149%
+  Titanium Harpoon 0.149%
+  Trident 0.055%
+  Dreadflayer 0.149%
+  Giant Fork 0.149%
+  Golden Mop 0.149%
+  Partisan 0.055%
+  Dragonfliar Cutter 0.055%
+  Shura Vhara 0.055%
+  Vajranda 0.055%
+  Massive Axe 0.149%
+  Bullova 0.055%
+  Fremel Hammer 0.149%
+  Great Hammer 0.149%
+  Shoka 0.055%
+  Cloud Tomahawk 0.149%
+  Golden Woofer 0.149%
+  Horseman's Hammer 0.055%
+  Voulge 0.149%
+  Arson 0.149%
+  Nature's Mystery 0.149%
+  Soothing Torch 0.149%
+  Witch's Broom 0.149%
+  Ice Bough Staff 0.149%
+  Spritewood Staff 0.149%
+  Yagrush 0.055%
+  Pastoral Staff 0.055%
+  Zhonpeli 0.149%
+  Aerial Cane 0.149%
+  Flower Crown 0.149%
+  Wind-Rhyme Staff 0.149%
+  Holy Cane 0.055%
+  Sacred Codex 0.149%
+  Cursed Cane 0.149%
+  Shadow Scepter 0.149%
+  Dolphin 0.149%
+  Dragon Tail 0.055%
+  Fire Piece 0.149%
+  Colorful Crackerjack 0.149%
+  Quarrel 0.149%
+  Handy Arquebus 0.149%
+  Wheellock Axe 0.055%
+  Crosswind 0.055%
+  Snaphance 0.055%
+  Swallowtail 0.055%
+  Chain Knuckles 0.149%
+  Crimson Talons 0.149%
+  Cup and Saucer 0.149%
+  Kaiser Knuckles 0.149%
+  Impact Knuckles 0.149%
+  Mauler 0.055%
+  Metal Glove 0.149%
+  Neko Punch 0.055%
+  Jamadhar 0.055%
+  Merciless Chastening 0.149%
+  Heavy Blast Knuckles 0.149%
+  Misanga Bracelet 0.149%
+  Tiger Fang 0.149%
+  Glass Bow 0.149%
+  Imperial Bow 0.055%
+  Sarnga 0.055%
+  Aves 0.055%
+  Ice Bow 0.149%
+  Elfin Bow 0.055%
+  Sutera's Bow 0.149%
+  Shadow Bow 0.055%
+  Aquarium Harp 0.149%
+  Athanasius 0.055%
+  Songsmith's Harp 0.149%
+  Stravaria 0.149%
+  Iron Tiger 0.055%
+  Wandering Blade 0.149%
+  Fluorithium Blade 0.055%
+  Zanbato 0.149%
+  Sauria 0.055%
 S Rare Summon Rates
- Garnet Carbuncle 0.100%
- Hellhound 0.100%
- Hydra 0.100%
- Vrazarek Firewyrm 0.100%
- Angelie Cascade 0.100%
- Aquamarine Carbuncle 0.100%
- Wilinus Icewyrm 0.100%
- Doomworm 0.100%
- Golem 0.100%
- Myconid 0.100%
- Ruination Gargoyle 0.100%
- Stone Golem 0.100%
- Zircon Carbuncle 0.100%
- Elmenhilde Windsprite 0.600%
- Elusious Windwyrm 0.600%
- Griffin 0.600%
- Wyvern 0.600%
- Opal Carbuncle 0.100%
- Pixie 0.100%
- Onyx Carbuncle 0.100%
-Rare Rates 82.00%
+ Garnet Carbuncle 0.150%
+ Hellhound 0.150%
+ Hydra 0.150%
+ Vrazarek Firewyrm 0.150%
+ Angelie Cascade 0.150%
+ Aquamarine Carbuncle 0.150%
+ Wilinus Icewyrm 0.150%
+ Doomworm 0.150%
+ Golem 0.150%
+ Myconid 0.150%
+ Ruination Gargoyle 0.150%
+ Stone Golem 0.150%
+ Zircon Carbuncle 0.150%
+ Elmenhilde Windsprite 0.150%
+ Elusious Windwyrm 0.150%
+ Griffin 0.150%
+ Wyvern 0.150%
+ Opal Carbuncle 0.150%
+ Pixie 0.150%
+ Onyx Carbuncle 0.150%
+Rare Rates 79.00%
 Rare Weapon Rates
-  Anelace 0.692%
-  Claymore 0.692%
-  Falchion 0.692%
-  Fire Sword 0.148%
-  Flame Rapier 0.692%
-  Vintage Flat Iron 0.149%
-  Ice Sword 0.692%
-  Icey Nail 0.692%
-  Shrimp Lure 0.148%
-  White Sword 0.149%
-  Earth Cutlass 0.692%
-  Heavy Metal Comb 0.149%
-  Two-Handed Sword 0.148%
-  Xiphos 0.148%
-  Lightbringer 1.000%
-  Old Sword 1.000%
-  Paper Fan 1.000%
-  Practice Sword 1.000%
-  Blue Crest 0.149%
-  Prism Tear 0.149%
-  Thunder Rapier 0.148%
-  Dark Sword 1.000%
-  Broken Bottle 0.149%
-  Fire Baselard 0.692%
-  Little Scarlet 0.149%
-  Kila 0.692%
-  Mailbreaker 0.692%
-  Water Kukri 0.692%
-  Kris 0.692%
-  Emerald Dagger 0.692%
-  Leaf Dagger 0.692%
-  Mandau 0.148%
-  Holy Kris 0.692%
-  Assassin's Dagger 0.692%
-  Bloody Piercer 0.148%
-  Dark Knife 0.692%
-  Switchblade 0.148%
-  Couse 0.692%
-  Fire Glaive 0.692%
-  Flame Halberd 0.692%
-  Langdebeve 0.692%
-  Aquan Killer 0.692%
-  Silver Pole 0.148%
-  Earth Halberd 0.692%
-  Ghillie Fork 0.148%
-  Halberd 0.692%
-  Night Horn 0.148%
-  Iron Pliers 0.149%
-  Soldier Axe 0.148%
-  Harvester 0.692%
-  Battle Axe 0.692%
-  Draph Hammer 0.148%
-  Earth Zaghnal 0.692%
-  Rock Hammer 0.692%
-  Sky Tomahawk 1.000%
-  Wind Axe 0.692%
-  Morning Star 0.148%
-  Tabar 0.692%
-  Thunder Kalinga Axe 0.692%
-  Neckchopper 0.692%
-  Forest Hermit Staff 0.148%
-  Rubia Rod 0.149%
-  Torch 0.148%
-  Cane 0.692%
-  Ocean Rod 0.692%
-  Snowman Rod 0.148%
-  Student Notebook 0.149%
-  Water Rod 0.692%
-  Feather Staff 0.692%
-  Stone Pole 0.148%
-  Taiaha 0.148%
-  Emerald Cane 0.692%
-  Feather Wand 0.148%
-  Moss Tree Staff 1.000%
-  Wind Rod 0.692%
-  Light Staff 0.148%
-  Shareeravadi 0.692%
-  Evil Wand 0.692%
-  The Cross 0.148%
-  Derringer 0.148%
-  Flame Bolt 0.148%
-  Grenade 0.692%
-  Matchlock 0.692%
-  Sawed-Off Shotgun 0.148%
-  Self Defender 0.148%
-  Straight Anchor 0.692%
-  Ranger Pistol 0.692%
-  Hand Pistol 0.692%
-  Petronel 0.148%
-  Jezail 0.692%
-  Chopsticks 0.148%
-  Fireball 0.692%
-  Heated Pata 0.692%
-  Pata 0.692%
-  Boogie Plates 0.149%
-  Fish Tooth 0.692%
-  Gauntlet 0.692%
-  Oven Mitts 0.149%
-  Tattoo Fist 0.149%
-  Tidal Wraps 0.692%
-  Iron Guard 0.149%
-  Mythril Knuckles 1.000%
-  Rock Cutter 0.692%
-  Tonfa 0.148%
-  Enchanted Nail 1.000%
-  Light Buckler 1.000%
-  Mythril Baghnakhs 0.692%
-  Whirlwind Wraps 0.692%
-  Blast Knuckles 0.148%
-  Composite Bow 0.692%
-  Flame Bow 0.149%
-  Mythril Bow 0.692%
-  Longbow 0.692%
-  Earth Bow 0.692%
-  Power Bow 0.692%
-  War Bow 0.692%
-  Wrapped Bow 0.692%
-  Lyre of Lamia 0.692%
-  Bronze Bell 0.149%
-  Night Bell 0.149%
-  Nodachi 0.692%
-  Mythril Katana 0.692%
+  Anelace 0.492%
+  Claymore 0.492%
+  Falchion 0.492%
+  Fire Sword 0.561%
+  Flame Rapier 0.492%
+  Vintage Flat Iron 0.561%
+  Ice Sword 0.492%
+  Icey Nail 0.492%
+  Shrimp Lure 0.561%
+  White Sword 0.561%
+  Earth Cutlass 0.492%
+  Heavy Metal Comb 0.561%
+  Two-Handed Sword 0.561%
+  Xiphos 0.561%
+  Lightbringer 0.561%
+  Old Sword 0.561%
+  Paper Fan 0.561%
+  Practice Sword 0.561%
+  Blue Crest 0.561%
+  Prism Tear 0.561%
+  Thunder Rapier 0.561%
+  Dark Sword 0.561%
+  Broken Bottle 0.561%
+  Fire Baselard 0.492%
+  Little Scarlet 0.561%
+  Kila 0.492%
+  Mailbreaker 0.492%
+  Water Kukri 0.492%
+  Kris 0.492%
+  Emerald Dagger 0.492%
+  Leaf Dagger 0.492%
+  Mandau 0.561%
+  Holy Kris 0.492%
+  Assassin's Dagger 0.492%
+  Bloody Piercer 0.561%
+  Dark Knife 0.492%
+  Switchblade 0.561%
+  Couse 0.492%
+  Fire Glaive 0.492%
+  Flame Halberd 0.492%
+  Langdebeve 0.492%
+  Aquan Killer 0.492%
+  Silver Pole 0.561%
+  Earth Halberd 0.492%
+  Ghillie Fork 0.561%
+  Halberd 0.492%
+  Night Horn 0.561%
+  Iron Pliers 0.561%
+  Soldier Axe 0.561%
+  Harvester 0.492%
+  Battle Axe 0.492%
+  Draph Hammer 0.561%
+  Earth Zaghnal 0.492%
+  Rock Hammer 0.492%
+  Sky Tomahawk 0.561%
+  Wind Axe 0.492%
+  Morning Star 0.561%
+  Tabar 0.492%
+  Thunder Kalinga Axe 0.492%
+  Neckchopper 0.492%
+  Forest Hermit Staff 0.561%
+  Rubia Rod 0.561%
+  Torch 0.561%
+  Cane 0.492%
+  Ocean Rod 0.492%
+  Snowman Rod 0.561%
+  Student Notebook 0.561%
+  Water Rod 0.492%
+  Feather Staff 0.492%
+  Stone Pole 0.561%
+  Taiaha 0.561%
+  Emerald Cane 0.492%
+  Feather Wand 0.561%
+  Moss Tree Staff 0.561%
+  Wind Rod 0.492%
+  Light Staff 0.561%
+  Shareeravadi 0.492%
+  Evil Wand 0.492%
+  The Cross 0.561%
+  Derringer 0.561%
+  Flame Bolt 0.561%
+  Grenade 0.492%
+  Matchlock 0.492%
+  Sawed-Off Shotgun 0.561%
+  Self Defender 0.561%
+  Straight Anchor 0.492%
+  Ranger Pistol 0.492%
+  Hand Pistol 0.492%
+  Petronel 0.561%
+  Jezail 0.492%
+  Chopsticks 0.561%
+  Fireball 0.492%
+  Heated Pata 0.492%
+  Pata 0.492%
+  Boogie Plates 0.561%
+  Fish Tooth 0.492%
+  Gauntlet 0.492%
+  Oven Mitts 0.561%
+  Tattoo Fist 0.561%
+  Tidal Wraps 0.492%
+  Iron Guard 0.561%
+  Mythril Knuckles 0.561%
+  Rock Cutter 0.492%
+  Tonfa 0.561%
+  Enchanted Nail 0.561%
+  Light Buckler 0.561%
+  Mythril Baghnakhs 0.492%
+  Whirlwind Wraps 0.492%
+  Blast Knuckles 0.561%
+  Composite Bow 0.492%
+  Flame Bow 0.561%
+  Mythril Bow 0.492%
+  Longbow 0.492%
+  Earth Bow 0.492%
+  Power Bow 0.492%
+  War Bow 0.492%
+  Wrapped Bow 0.492%
+  Lyre of Lamia 0.492%
+  Bronze Bell 0.561%
+  Night Bell 0.561%
+  Nodachi 0.492%
+  Mythril Katana 0.492%
 Rare Summon Rates
- Minotaur 0.400%
- Twilight Devil 0.400%
- Venom Lancer 0.400%
- Walking Torch 0.400%
- Angelie 0.400%
- Crusher 0.400%
- Jawfish 0.400%
- Purgatorian 0.400%
- Rivacuda 0.400%
- Slime 0.400%
- Swordshark 0.400%
- Bonethorn 0.400%
- Crawler 0.400%
- Lumacie Griffin 0.400%
- Mandrake 0.400%
- Sleepyhead 0.400%
- Belle 3.000%
- Dragonflair 3.000%
- Hornbird 3.000%
- Rodfly 3.000%
- Ghost Light 0.400%
- Cave Bat 0.400%
- Imp 0.400%
- Skeleton 0.400%
+ Minotaur 0.625%
+ Twilight Devil 0.625%
+ Venom Lancer 0.625%
+ Walking Torch 0.625%
+ Angelie 0.625%
+ Crusher 0.625%
+ Jawfish 0.625%
+ Purgatorian 0.625%
+ Rivacuda 0.625%
+ Slime 0.625%
+ Swordshark 0.625%
+ Bonethorn 0.625%
+ Crawler 0.625%
+ Lumacie Griffin 0.625%
+ Mandrake 0.625%
+ Sleepyhead 0.625%
+ Belle 0.625%
+ Dragonflair 0.625%
+ Hornbird 0.625%
+ Rodfly 0.625%
+ Ghost Light 0.625%
+ Cave Bat 0.625%
+ Imp 0.625%
+ Skeleton 0.625%
 			</textarea>
-			<small>Built-in draw rates last updated 2017-01-23.</small>
+			<small>Built-in draw rates last updated 2017-01-29.</small>
 		</form>
 		<div id="chart"></div>
 		<p>Bookmark this page to save your wishlist and settings. Updates to the draw rate input list are not currently saved.</p>
