Single draw note

--- a/granblue/draw.html
+++ b/granblue/draw.html
@@ -447,6 +447,7 @@ Rare Summon Rates
 		</form>
 		<div id="chart"></div>
 		<p>Bookmark this page to save your wishlist and settings. Updates to the draw rate input list are not currently saved.</p>
+		<p>Draws are currently only calculated as single draws. In 10-part draws, real SR rates will be slightly higher and real R rates will be slightly lower. If you know how to efficiently calculate the cumulative probability of two binomial distributions with different probabilities, <a href="https://github.com/codensity/codensity.github.io/issues">I'd like to hear from you.</a></p>
 		<p id="formula"></p>
 		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.0/raphael-min.js"></script>
