Add subresource integrity and crossorigin attributes

--- a/granblue/draw.html
+++ b/granblue/draw.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Draw Rate Calculator</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css" integrity="sha256-szHusaozbQctTn4FX+3l5E0A5zoxz7+ne4fr8NgWJlw=" crossorigin="anonymous">
 		<style>
 			body { font-family: -apple-system, sans-serif; font-size: 80%; max-width: 80em; margin: 0 auto; }
 			h1 { font-size: 1.5em;  }
@@ -442,10 +442,10 @@ Rare Summon Rates
 		<p>Bookmark this page to save your wishlist and settings. Updates to the draw rate input list are not currently saved.</p>
 		<p>Draws are currently only calculated as single draws. In 10-part draws, real SR rates will be slightly higher and real R rates will be slightly lower. If you know how to efficiently calculate the cumulative probability of two binomial distributions with different probabilities, <a href="https://github.com/codensity/codensity.github.io/issues">I'd like to hear from you.</a></p>
 		<p id="formula"></p>
-		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.0/raphael-min.js"></script>
-		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
-		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/levenshtein/1.0.5/levenshtein.min.js"></script>
+		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.7/raphael.min.js" integrity="sha256-67By+NpOtm9ka1R6xpUefeGOY8kWWHHRAKlvaTJ7ONI=" crossorigin="anonymous"></script>
+		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js" integrity="sha256-0rg2VtfJo3VUij/UY9X0HJP7NET6tgAY98aMOfwP0P8=" crossorigin="anonymous"></script>
+		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/levenshtein/1.0.5/levenshtein.min.js" integrity="sha256-5RTt+B1DlqFis/ipkeYZ+1D8500HFobtz2aBJnhKRsA=" crossorigin="anonymous"></script>
 		<script defer src="draw.js"></script>
 	</body>
 </html>
