--- a/granblue/draw.html
+++ b/granblue/draw.html
@@ -10,10 +10,11 @@
 			h1 { font-size: 1.5em;  }
 			h1, .warning { text-align: center; }
 			p { margin: 1.4em; }
-			#chart { height: 31em; width: calc(100% - 14em - 1.4em); }
-			#options { float: right; width: 14em; margin-left: 1.4em; }
+			#chart { height: 31em; width: calc(100% - 18em - 1.4em); }
+			#options { float: right; width: 18em; margin-left: 1.4em; }
 			#minimum { width: 3em; }
 			#queries { padding-left: 1em; }
+			#add-query select, #add-query button { margin: 0 0.5em 0.5em 0; display: block; }
 			#queries li span { border-bottom: 1px dotted #333; cursor: help; }
 			#options > label { font-weight: bold; display: block; margin: 1em 0 0.25em; }
 			#options > label:first-child { margin-top: 0; }
